--- a/index.html
+++ b/index.html
@@ -14,8 +14,23 @@
 </head>
 <body>
     <header class="d-flex flex-column main-font" id="header"></header>
-    <main></main>
+    <main class="third-bg-color">
+        <div class="home-cover">
+            <div class="cover-video">
+                <video src="images/video/cover.mp4" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" class="object-fit-cover"></video>
+            </div>
+            <div id="cover-background" class="main-font">
+            </div>
+            <div class="w-100 m-0 p-0 main-font cover-text-home text-white d-flex justify-content-center">
+                <p class="p-0 m-0">Najbolji <span class="accent-text-color">Gaming miševi</span>. Istražite našu veliku ponudu <span class="accent-text-color">vrhunskih</span> glodavaca!</p>
+            </div>
+        </div>
+        <div class="container">
+            <h2 class="secondary-font">Najpopularniji miševi</h2>
+        </div>
+    </main>
     <footer class="d-flex flex-column main-font" id="footer"></footer>
     <script src="js/javascript.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
